# AlgorithmCourse

./: .gitignore  CMakeLists.txt
Homework_1/: Solution.cpp  Solution.h  test.cpp
Homework_2/: Solution.cpp  Solution.h  test.cpp
Homework_3/: Solution.cpp  Solution.h  test.cpp
Homework_4/: MyAlgorithm.cpp  MyAlgorithm.h  Test.cpp
Homework_5/: MyAlgorithm.cpp  MyAlgorithm.h  Test.cpp
Homework_6/: MyAlgorithm.cpp  MyAlgorithm.h  test.cpp
Homework_7/: MyAlgorithm.cpp  MyAlgorithm.h  test.cpp
Homework_8/: MyAlgorithm.cpp  MyAlgorithm.h  test.cpp
Homework_9/: MyAlgorithm.cpp  MyAlgorithm.h  test.cpp
Lab1/: Lab1.cpp  Lab1.h  MyAgorithm.cpp  MyAgorithm.h  test.cpp
Lab2/: Lab2.cpp  Lab2.h  test.cpp
Lab3/: NQueens.cpp  NQueens.h  makefile
MyLab/: MyLab.cpp
